more formatting fixes

--- a/BlockedFrontend/templates/admin/ispreports.html
+++ b/BlockedFrontend/templates/admin/ispreports.html
@@ -258,7 +258,7 @@ tr:hover * .action-button {
   {% endif %}
   </td>
   <!--<td class="center"></td>-->
-  <td class="" style="text-align: right;">
+  <td class="" style="">
       <div class="btn-group action-button invisible">
           <a class="btn btn-default" href="{{url_for('.ispreports_view', url=report.url, network_name=report.network_name)}}" title="View report">View</a>
           <button class="dropdown-toggle btn btn-default" title="Actions for {{ report.url }}" data-toggle="dropdown">
