fix escalation form rendering openrightsgroup/Blocking-Middleware#125

--- a/BlockedFrontend/templates/admin/ispreports_escalate.html
+++ b/BlockedFrontend/templates/admin/ispreports_escalate.html
@@ -28,9 +28,13 @@
             {{ forms.textarea_field('Submitted by', 'additional_contact', "Request originally submitted by " + report.name + " (" + report.email + ")" ) }}
 
             <h3>Mobile network response</h3>
+            {% if emailreply %}
             {{ forms.static_field('Date', 'reply_created', emailreply.created|fmtime) }}
+            {% else %}
+            <div><em>No reply or no decision received</em></div>
+            {% endif %}
 
-            {{ forms.textarea_field('Reply','previous', email.show_message(emailreply.decode()), rows=8) }}
+            {{ forms.textarea_field('Reply','previous', email.show_message(emailreply.decode()) if emailreply else '', rows=8) }}
 
 
             <h3>Nature of complaint</h3>
