Add status message for domain suspension

--- a/BlockedFrontend/templates/results.part.html
+++ b/BlockedFrontend/templates/results.part.html
@@ -40,6 +40,9 @@
         .
     </i></p>
     {% endif %}
+    {% if item.blocktype == 'SUSPENSION' %}
+    <p><i>This site has been suspended by the registrar.</i></p>
+    {% endif %}
 </td>
 
 <td>
