--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -461,7 +461,8 @@ Request sent to BBFC on {{ bbfc_report.created|fmtime }}
                 <input type="hidden" name="report_id" value="{{ report.id }}" />
                 {{ forms.radio_field("Block matched the ISP's policy", 'policy_match', 'consistent', True if report.policy_match == 'consistent' else False) }}
                 {{ forms.radio_field("Block did not match the ISP's policy", 'policy_match', 'inconsistent', True if report.policy_match == 'inconsistent' else False) }}
-                
+                {{ forms.radio_field("Block policy unknown", 'policy_match', 'unknown', True if report.policy_match == 'unknown' else False) }}
+
                 
                 {{ forms.check_field("This is an egregious block", 'egregious_block', 't', report.egregious_block) }}
                 {{ forms.check_field("Add to frontend site \"featured blocks\".", 'featured_block', 't', report.featured_block) }}
