--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -94,6 +94,12 @@
 
 {% endmacro %}
 
+{% macro registry_menu() %}
+<a class="{{ 'active' if request.path == '/' else ''}}" href="/">Home</a>
+{{ menu_link('Registry Suspensions', '/suspensions') }}
+{{ menu_link('Domain Seizures', '/seizures') }}
+{% endmacro %}
+
 {% macro piwik() %}
 <!-- Matomo -->
 {% if config.PIWIK %}
@@ -117,13 +123,14 @@
 {% endmacro %}
 
 {% macro footer_menu() %}
+{% set default_vhost = [request.scheme, "://", config.SUBDOMAIN_MAIN, ".", config.SERVER_NAME]|join('') %}
             <a class="" href="https://action.openrightsgroup.org/sign-up-for-org-email-updates">Stay in touch</a>
             <!-- <a class="" href="/support">Support</a> -->
-            <a class="" href="/credits">Credits</a>
-            <a class="" href="/stats/probes">Probe Status</a>
-            <a class="" href="/legal-blocks">Court Ordered Blocks</a>
-            <a class="" href="/dea-blocking-orders">Age-verification Blocks</a>
-            <a class="" href="/support">Get involved</a>
+            <a class="" href="{{ default_vhost }}/credits">Credits</a>
+            <a class="" href="{{ default_vhost }}/stats/probes">Probe Status</a>
+            <a class="" href="{{ default_vhost }}/legal-blocks">Court Ordered Blocks</a>
+            <a class="" href="{{ default_vhost }}/dea-blocking-orders">Age-verification Blocks</a>
+            <a class="" href="{{ default_vhost }}/support">Get involved</a>
             <a class="" href="https://www.openrightsgroup.org/donate/">Donate</a>
             <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
             <a class="" href="https://www.openrightsgroup.org/privacy/">Privacy Policy</a>
