--- a/BlockedFrontend/templates/registry/registry_seizures.html
+++ b/BlockedFrontend/templates/registry/registry_seizures.html
@@ -2,11 +2,11 @@
 {%import "remotecontent.part.html" as rmt %}
 {%import "paging.part.html" as paging %}
 
-{% set pagetitle = "Registry suspensions" %}
+{% set pagetitle = "Domain seizures" %}
 
 {%block banner_text %}
 {% call rmt.remote('banner_text') %}
-Domains that have been suspended by their registrar
+Domains that have been seized by CTIRU/PIPCU
 {% endcall %}
 {% endblock %}
 
@@ -15,22 +15,21 @@ Domains that have been suspended by their registrar
 {% endblock %}
 
 {% block body %}
-
-<h3>{{ count }} suspended domain{{ '' if count == 1 else 's' }} found</h3>
+<h3>{{ count }} seized domain{{ '' if count == 1 else 's' }} found</h3>
 
 <table class="table">
     <tr>
         <th>Domain</th>
-        <th>Registrar</th>
+        <th>Detected on Network</th>
         <th>Detected</th>
         <th>Last Seen</th>
     </tr>
-    {% for row in suspensions %}
+    {% for row in seizures %}
     <tr>
         <td>{{ row.url|noproto }} </td>
-        <td>{{ row.registry|title }}</td>
+        <td>{{ row.isp_description }}</td>
         <td>{{ row.created|fmdate }} {% if row.created.date() == newdate %}<span class="label label-info">New</span>{% endif %}</td>
-        <td>{{ row.lastseen|fmdate }}</td>
+        <td>{{ row.last_blocked|fmdate }}</td>
     </tr>
     {% endfor %}
 
