Better date grouping openrightsgroup/Blocking-Middleware#94

--- a/BlockedFrontend/templates/registry/registry_seizures.html
+++ b/BlockedFrontend/templates/registry/registry_seizures.html
@@ -33,7 +33,7 @@ Domains that have been seized by CTIRU/PIPCU
             {% endfor %}
             </ul>
         </td>
-        <td>{{ row.created|fmdate }} {% if row.created.date() == newdate %}<span class="label label-info">New</span>{% endif %}</td>
+        <td>{{ row.created|fmdate }} {% if row.created == newdate %}<span class="label label-info">New</span>{% endif %}</td>
         <td>{{ row.last_blocked|fmdate }}</td>
     </tr>
     {% endfor %}
