Add category column openrightsgroup/Blocking-Middleware#94

--- a/BlockedFrontend/templates/registry/registry_seizures.html
+++ b/BlockedFrontend/templates/registry/registry_seizures.html
@@ -19,7 +19,7 @@ Domains that have been seized by CTIRU/PIPCU
 <table class="table">
     <tr>
         <th>Domain</th>
-        <th>category</th>
+        <th>Category</th>
         <th>Detected</th>
         <th>Last Seen</th>
     </tr>
