--- a/BlockedFrontend/templates/forms.part.html
+++ b/BlockedFrontend/templates/forms.part.html
@@ -48,13 +48,14 @@
 </div>
 {% endmacro %}
 
-{% macro check_field(label, name, value, checked=False) %}
+{% macro check_field(label, name, value, checked=False, inner=None) %}
 {% if label %}
 <div class="form-group">
 <div class="checkbox">
   <label class="control-label">
 {% endif %}
     <input type="checkbox" value="{{value}}" name="{{name}}" {{ 'checked' if checked else '' }} />
+{% if inner %}{{ inner(value) }}{% endif %}}
 {% if label %}
     {{ label }}
   </label>
