add new policy match enum (bugfix) openrightsgroup/Blocking-Middleware#143

--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -514,4 +514,4 @@ Request sent to BBFC on {{ bbfc_report.created|fmtime }}
 
 {% macro policy_match_help(value) %}
 <span class="glyphicon glyphicon-info-sign" title="Site is under new use or is unused"></span>
-{% endif %}
+{% endmacro %}
