add new policy match enum (bugfix) openrightsgroup/Blocking-Middleware#143

--- a/BlockedFrontend/templates/forms.part.html
+++ b/BlockedFrontend/templates/forms.part.html
@@ -70,7 +70,7 @@
   <label class="control-label">
     <input type="radio" value="{{value}}" name="{{name}}" {{ 'checked' if checked else '' }} />
     {{ label }}
-    {% if inner %}{{ inner(value) }}{% endif %}}
+    {% if inner %}{{ inner(value) }}{% endif %}
   </label>
 </div>
 </div>
