max screenshot height openrightsgroup/Blocking-Middleware#115

--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -94,7 +94,7 @@ $(document).ready(function(){
 </div>
 
 <div>
-    <img src="{{ urlobj.get_screenshot_url() }}" class="img-responsive" title="{{ url }} screenshot {{ urlobj.get_screenshot_date() }}"/>
+    <img src="{{ urlobj.get_screenshot_url() }}" style="max-height: 12em" class="img-responsive" title="{{ url }} screenshot {{ urlobj.get_screenshot_date() }}"/>
 </div>
 
 </div>
