max screenshot height openrightsgroup/Blocking-Middleware#115

--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -93,8 +93,8 @@ $(document).ready(function(){
 <a target="_blank" href="{{ url }}" class="btn btn-link" title="View reported website; opens in a new window">View {{ url|domain }} <span class="glyphicon glyphicon-share"></span></a>
 </div>
 
-<div style="text-align: center">
-    <img src="{{ urlobj.get_screenshot_url() }}" style="max-height: 12em" class="img-responsive" title="{{ url }} screenshot {{ urlobj.get_screenshot_date() }}"/>
+<div style="">
+    <img src="{{ urlobj.get_screenshot_url() }}" style="max-height: 16em" class="img-responsive" title="{{ url }} screenshot {{ urlobj.get_screenshot_date() }}"/>
 </div>
 
 </div>
