center thumb openrightsgroup/Blocking-Middleware#115

--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -15,6 +15,10 @@
     cursor: pointer;
 }
 
+.screenshot-modal {
+    width: 296px;
+}
+
 {% endblock %}
 
 {% block page_script %}
@@ -90,15 +94,17 @@ $(document).ready(function(){
 <p>No current status information</p>
 {% endif %}
 
-<div class="clearfix">
-<a target="_blank" href="{{ url_for('site.site', url=url) }}" class="btn btn-link" title="View status page on the public site; opens in a new window">View site status on Blocked <span class="glyphicon glyphicon-share"></span></a>
-</div>
-<div>
-<a target="_blank" href="{{ url }}" class="btn btn-link" title="View reported website; opens in a new window">View {{ url|domain }} <span class="glyphicon glyphicon-share"></span></a>
+<div class="row">
+    <div class="col-md-6">
+        <a target="_blank" href="{{ url_for('site.site', url=url) }}" class="btn btn-link" title="View status page on the public site; opens in a new window">View site status on Blocked <span class="glyphicon glyphicon-share"></span></a>
+    </div>
+    <div class="col-md-6">
+        <a target="_blank" href="{{ url }}" class="btn btn-link" title="View reported website; opens in a new window">View {{ url|domain }} <span class="glyphicon glyphicon-share"></span></a>
+    </div>
 </div>
 
-<div style="">
-    <a href="" class="screenshot-modal"><img src="{{ urlobj.get_screenshot_thumb_url() }}" style="max-height: 16em" class="img-responsive" title="{{ url }} screenshot {{ urlobj.get_screenshot_date() }}"/></a>
+<div style="padding-top: 0.5em" class="mt-2">
+    <a href="" class="screenshot-modal center-block"><img src="{{ urlobj.get_screenshot_thumb_url() }}" style="max-height: 16em" class="img-responsive" title="{{ url }} screenshot {{ urlobj.get_screenshot_date() }}"/></a>
 </div>
 
 </div>
