--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -46,7 +46,7 @@ $(document).ready(function(){
     });
 
     $('a.confirm-category').click(function(){
-        return confirm('Are you sure you want to remove this category?')
+        return confirm('Are you sure you want to remove category "' + $(this).data('category-name') + '"?')
     });
 
 });
@@ -465,6 +465,7 @@ $(document).ready(function(){
                             {% for cat in report_damage_categories %}
                             <li>{{ cat.name }}
                             <a class="confirm-category"
+                               data-category-name="{{ cat.name }}"
                                href="{{ url_for('.ispreports_remove_category', id=cat.asgt_id, report=report.id) }}">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </a>
