fix talktalk reply display error (again)

--- a/BlockedFrontend/templates/admin/ispreports_email.html
+++ b/BlockedFrontend/templates/admin/ispreports_email.html
@@ -270,7 +270,7 @@ $(document).ready(function(){
     </span>
                         {% endif %}
                     </td>
-                    <td class="num">{{(message.date|default('')).split(' +')|first}}</td>
+                    <td class="num">{{(message.date or '').split(' +')|first}}</td>
                 </tr>
 
                 {% endfor %}
